fix: always show code's scrollbar

--- a/source/css/_variables.less
+++ b/source/css/_variables.less
@@ -22,6 +22,7 @@
 @color-border: #CCC;
 @color-border-light: #DDD;
 @color-border-even-lighter: #EEE;
+@color-border-dark: #555;
 @color-near-white: #FAFAFA;
 @color-quote: #5DB1B4;
 @color-main-link: #368CCB;
